# cardsense-extractor

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  VIBE_SPEC.md  WORKSPACE_CONTEXT.generated.md  analyze_audit.py  conftest.py  main.py  pyproject.toml
extractor/: bank_wide_promotions.py  benefit_plans.py  card_lifecycle.py  cathay_real.py  ctbc_real.py  db_store.py  esun_real.py  fubon_real.py  html_utils.py  ingest.py  load.py  normalize.py  parse_rules.py  promotion_rules.py  supabase_store.py  taishin_real.py  validate.py  versioning.py
jobs/: analyze_jsonl_output.py  audit_promotion_expiry.py  clean_card_names_in_db.py  debug_ctbc_links.py  debug_item1.py  import_jsonl_to_db.py  refresh_and_deploy.py  run_cathay_real_job.py  run_ctbc_real_job.py  run_ctbc_targeted.py  run_esun_real_job.py  run_fubon_real_job.py  run_real_bank_job.py  run_sample_job.py  run_taishin_real_job.py  run_taishin_targeted.py  tag_plan_ids.py  test_real_fetch.py
models/: promotion.py
sql/: cardsense_schema.sql  migrate_add_subcategory.sql  supabase_schema.sql
tests/: test_audit_promotion_expiry.py  test_bank_wide_promotions.py  test_benefit_plans.py  test_cathay_real.py  test_cobranded_and_date_conditions.py  test_ctbc_real.py  test_db_store_expiry.py  test_esun_hundred_store.py  test_esun_payment_classification.py  test_esun_real.py  test_fubon_real.py  test_ingest.py  test_normalize.py  test_promotion_rules.py  test_refresh_and_deploy.py  test_sectioned_page.py  test_subcategory_conditions.py  test_supabase_store.py  test_taishin_payment_classification.py  (+2 more)
(+17 files in other folders)
