[project]
name = "cardsense-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    "psycopg2-binary>=2.9",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
]
